# deal-deck-generator

./: .gitignore  AGENTS.md  Cards.md  IMPROVEMENTS.md  README.md  analysis_results.json  analyze_cards.py  cards.yaml  design_tokens.json  gen_claude.py  gen_codex.py  main.py  pyproject.toml  real roots notes.md  render_deck.py  test_render.py  us_game_deck.ai
.github/workflows/: ci.yml
reviews_triage/: pr-4-feedback-20260708-085855.json  pr-5-feedback-20260708-091230.json  pr-7-feedback-20260711-172349.json
src/: __init__.py  cli.py  geometry.py  goldens.py  tokens.py
src/assets/fonts/: LICENSE-GilliusADF.txt
src/compare/: contact_sheet.py
src/data/: __init__.py  loader.py  themes.py
src/models/: __init__.py  card.py  deck.py
src/raster/: base.py  fontsetup.py
src/render/: pipeline.py
src/renderer/: card_renderer.py  elements.py  primitives.py
src/svg/: card_back.py  core.py
src/svg/cards/: __init__.py  action.py  base.py  chassis.py  money.py  property_.py  rent.py  wildcard.py
src/svg/components/: badge.py  border_band.py  character.py  circle_title.py  color_ring.py  fan_icon.py  guilloche.py  header_bar.py  icons.py  m_glyph.py  rent_table.py
src/templates/: action_template.py  generate_money_template_svg.py  money_template.py  property_template.py  rent_template.py  utils.py  wildcard_template.py
src/text/: layout.py  measure.py  richtext.py
tests/: __init__.py  conftest.py  test_card_back.py  test_card_rendering.py  test_cli.py  test_contact_sheet.py  test_data.py  test_goldens.py  test_render.py  test_svg_structure.py  test_text_layout.py  test_themes.py  test_upload_export.py
themes/_shared/: expansion.yaml
themes/arizona/: cards.yaml  tokens.json
themes/chicago/: cards.yaml  tokens.json
themes/classic/: cards.yaml
themes/oaxaca/: cards.yaml  tokens.json
