[project]
name = "deal-deck-generator"
version = "0.1.0"
description = "Data-driven Monopoly Deal card deck generator (YAML -> SVG -> print-ready PNG)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fonttools>=4.55.0",
    "pillow>=12.0.0",
    "pyyaml>=6.0.3",
]

[tool.pyrefly]
search-path = ["."]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "pytest>=8.0.0",
    "numpy>=1.26.0",
    "ty>=0.0.57",
    "pyrefly>=1.1.1",
]
