[project]
name = "deal-deck-generator"
version = "0.1.0"
description = "Data-driven Deal card deck generator (YAML -> SVG -> print-ready PNG)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fonttools>=4.55.0",
    "pillow>=12.0.0",
    "pyyaml>=6.0.3",
]

[tool.pyrefly]
search-path = ["."]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "numpy>=1.26.0",
    "ty>=0.0.57",
    "pyrefly>=1.1.1",
    "lizard>=1.23.0",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=91",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN204", "COM812", "D101", "D102", "D103", "D104", "D105", "D107", "D203", "D205", "D212", "D213", "EM101", "EM102", "FBT001", "PLR2004", "PLW1510", "S603", "SIM102", "T201", "TC001", "TC003", "TID252", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ARG001", "ARG005", "D103", "D104", "DTZ003", "ERA001", "F403", "F405", "FBT002", "FBT002", "G004", "N802", "PLC0415", "PLR2004", "PLW1510", "PT011", "PT013", "PTH110", "PTH118", "PTH119", "PTH122", "PTH123", "PTH207", "S101", "S102", "S311", "S603", "S607", "SIM115"]
"benchmarks/*.py" = ["INP001"]
"benchmarks/memory_profile.py" = ["F821"]
"examples/*.py" = ["D103", "F403", "F405", "INP001", "S311"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
